--- a/styles/main.css
+++ b/styles/main.css
@@ -35,7 +35,12 @@ body, button {
     font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1em;
     letter-spacing: 0.03em;
+    background: url(../images/background.jpg) top center;
 }
+
+/* main {
+    background: url(../images/background.jpg) ;
+} */
 
 header {
     width: 100%;
@@ -48,10 +53,28 @@ header {
 .wrapper {
     width: 1200px;
     margin: 0 auto;
+    overflow: hidden;
+}
+
+.frame {
+    margin-top: 16px;
+    box-shadow: 3px 3px 10px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    background-color: white;
+    position: relative;
+}
+
+.annotation {
+    position: absolute;
+    top: 20px;
+    left: 30px;
+    z-index: 1;
+    background: rgba(255, 255, 255, .5);
 }
 
 .header-content {
     width: 1200px;
+    padding: 0 20px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -119,6 +142,7 @@ h2 {
     margin: 24px auto 0;
     padding: 16px 24px;
     width: 85%;
+    background-color: white;
     display: flex;
     height: 240px;
     border-radius: 10px;
@@ -139,17 +163,16 @@ h2 {
     width: 270px;
     margin-right: 32px;
     overflow: hidden;
-    box-shadow: inset 3px 3px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
     transition: 0.3s ease-in-out;
 }
 
 .portfolio-item-left img {
     object-fit: cover;
-    z-index: -2;
 }
 
 .portfolio-item-left:hover {
-    box-shadow: inset 3px 3px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
 }
 
 .portfolio-item-right {
