--- a/styles/main.css
+++ b/styles/main.css
@@ -38,10 +38,6 @@ body, button {
     background: url(../images/background.jpg) top center;
 }
 
-/* main {
-    background: url(../images/background.jpg) ;
-} */
-
 header {
     width: 100%;
     background-color: rgb(0, 62, 66);
@@ -157,7 +153,7 @@ h2 {
 }
 
 .portfolio-item-left {
-    display: flex;
+    /* display: flex; */
     height: 100%;
     width: 270px;
     margin-right: 32px;
@@ -167,6 +163,8 @@ h2 {
 }
 
 .portfolio-item-left img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -189,15 +187,6 @@ h2 {
     margin-top: auto;
 }
 
-/* .portfolio-item a {
-    display: inline-block;
-    align-self: flex-end;
-    margin-left: auto;
-    color:rgb(0, 62, 66);
-    font-weight: 400;
-    transition: 0.3s;
-} */
-
 .github-popup-opener {
     align-self: flex-start;
     margin-left: auto;
@@ -211,17 +200,26 @@ h2 {
     color: rgb(30, 148, 156);
 }
 
-.github-popup-opener:hover > .github-popup-content {
+.git-title {
+    position: relative;
+}
+.github-popup-opener .git-title:hover > .github-popup-content {
     transform: scaleY(1);
+    visibility: visible;
     opacity: 1;
 }
 
 .github-popup-content {
+    position: absolute;
+    right: 0;
+    visibility: hidden;
     opacity: 0;
-    padding: 8px 0;
+    /* margin-top: 8px; */
+    padding-top: 10px;
     color: gray;
     transform-origin: 0% 0%;
     transform: scaleY(.4);
+    transform: rotateX(90deg);
     transition: .3s ease-in-out;
 }
 
@@ -232,6 +230,7 @@ h2 {
     color: rgb(30, 148, 156);
     padding: 6px 24px;
     transition: 0.3s ease-in-out;
+    /* box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1); */
 }
 
 .github-popup-content a:hover {
