--- a/styles/main.css
+++ b/styles/main.css
@@ -139,7 +139,7 @@ h2 {
     width: 85%;
     background-color: white;
     display: flex;
-    height: 240px;
+    min-height: 200px;
     border-radius: 10px;
     color: gray;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
@@ -154,8 +154,8 @@ h2 {
 
 .portfolio-item-left {
     /* display: flex; */
-    height: 100%;
-    width: 270px;
+    height: 168px;
+    width: 30%;
     margin-right: 32px;
     overflow: hidden;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
@@ -174,9 +174,14 @@ h2 {
 
 .portfolio-item-right {
     display: flex;
-    height: 100%;
+    min-height: 100%;
     flex-direction: column;
-    max-width: 45%;
+    width: 470px;
+}
+
+.portfolio-item-right-header {
+    display: flex;
+    justify-content: space-between;
 }
 
 .portfolio-item-right p {
