--- a/styles/main.css
+++ b/styles/main.css
@@ -31,7 +31,7 @@
     padding: 0;
 }
 
-body, button {
+body {
     font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1em;
     letter-spacing: 0.03em;
@@ -251,6 +251,7 @@ h2 {
 .github-popup-content a {
     display: block;
     background-color: rgb(245, 245, 245);
+    white-space: nowrap;
     margin-top: 2px;
     color: rgb(30, 148, 156);
     padding: 6px 24px;
