--- a/styles/follower.scss
+++ b/styles/follower.scss
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     height: 600px;
-    cursor: default, auto;
+    cursor: url(../images/fish24s.png), auto;
 }
 
 .annotation {
