--- a/styles/follower.css
+++ b/styles/follower.css
@@ -13,7 +13,7 @@
       -ms-flex-pack: center;
           justify-content: center;
   height: 600px;
-  cursor: default, auto;
+  cursor: url(../images/fish24s.png), auto;
 }
 
 .annotation {
