--- a/styles/main.css
+++ b/styles/main.css
@@ -65,6 +65,7 @@ header {
     top: 20px;
     left: 30px;
     z-index: 1;
+    padding: 8px;
     background: rgba(255, 255, 255, .5);
 }
 
@@ -109,10 +110,17 @@ header {
 }
 
 .name {
+    display: block;
+    text-decoration: none;
     margin-top: 16px;
     font-size: 20px;
     font-weight: 400;
-    color:white
+    color:white;
+    transition: .3s;
+}
+
+.name:hover {
+    text-shadow: 0 0 7px rgba(255, 255, 255, .8);
 }
 
 .subtitle {
@@ -150,6 +158,10 @@ h2 {
 
 .portfolio-item:hover {
     box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.3);
+}
+
+.portfolio-item:last-child {
+    margin-bottom: 40px;
 }
 
 .portfolio-item-left {
