--- a/styles/task-board.css
+++ b/styles/task-board.css
@@ -20,6 +20,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 100%;
 }
 
@@ -36,7 +38,7 @@
   max-width: 200px;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  margin: 0 15px;
+  margin: 0 15px 15px;
   padding: 10px;
   -webkit-transition: .3s all ease-in-out;
   transition: .3s all ease-in-out;
@@ -160,6 +162,7 @@
   height: 30px;
   background: rgba(155, 155, 155, 0.3);
   border-radius: 3px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
   margin-top: 5px;
   display: -webkit-box;
   display: -ms-flexbox;
