--- a/styles/task-board.scss
+++ b/styles/task-board.scss
@@ -19,6 +19,7 @@
             display: flex;
             flex-direction: column;
             align-self: baseline;
+            position: relative;
             max-width: 200px;
             width: 100%;
             background-color: rgba(0, 0, 0, .5);
@@ -49,6 +50,19 @@
                     font-size: 14px;
                     outline: none;
                     border: none;
+                    overflow-wrap: break-word;
+                    position: relative;
+
+                    .close-card-btn {
+                        position: absolute;
+                        top: 1px;
+                        right: 3px;
+                        font-size: 0.8em;
+                        color: gray;
+                        &:hover {
+                            color: black;
+                        }
+                    }
                 }
             }
 
@@ -145,5 +159,16 @@
         color: white;
         border-radius: 3px;
         text-transform: uppercase;
+    }
+
+    .close-board-btn {
+        color: #ffffffaa;
+        cursor: pointer;
+        position: absolute;
+        right: 4px;
+        top: 4px;
+        &:hover {
+            color: white;
+        }
     }
 }
