--- a/styles/task-board.css
+++ b/styles/task-board.css
@@ -13,7 +13,8 @@
   width: 100%;
   height: 100%;
   padding: 50px 0;
-  background: url("../images/mountain-view.jfif") center/cover no-repeat;
+  background: -webkit-gradient(linear, left top, left bottom, from(#ffffff55), to(#ffffff33)), url("../images/mountain-view.jfif") center/cover no-repeat;
+  background: linear-gradient(to bottom, #ffffff55, #ffffff33), url("../images/mountain-view.jfif") center/cover no-repeat;
 }
 
 .app .boards {
@@ -36,7 +37,8 @@
   -ms-flex-item-align: baseline;
       align-self: baseline;
   position: relative;
-  max-width: 200px;
+  max-width: 195px;
+  min-height: 94px;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   margin: 0 15px 15px;
@@ -44,15 +46,24 @@
   -webkit-transition: .3s all ease-in-out;
   transition: .3s all ease-in-out;
   border-radius: 3px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .app .boards-item .title {
   padding: 5px;
   color: white;
+  margin: 0 auto;
+  max-width: 95%;
+  overflow-wrap: break-word;
 }
 
 .app .boards-item .title:focus {
-  outline: 1px solid rgba(168, 168, 168, 0.45);
+  outline: 1px solid rgba(168, 168, 168, 0.4);
+}
+
+.app .boards-item .title:hover {
+  text-shadow: 0px 0px 3px white;
 }
 
 .app .boards-item .list {
@@ -122,6 +133,7 @@
 
 .app .boards-item .form .textarea:focus {
   outline: none;
+  font-family: 'Roboto', Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .app .boards-item .form .buttons {
@@ -210,7 +222,7 @@
       -ms-flex-align: center;
           align-items: center;
   background: rgba(19, 130, 204, 0.6);
-  border: none;
+  border: 1px solid rgba(255, 255, 255, 0.5);
   width: 150px;
   cursor: pointer;
   position: absolute;
@@ -223,6 +235,12 @@
   text-transform: uppercase;
 }
 
+.app .button span {
+  font-size: 1.2em;
+  margin-right: 10px;
+  color: white;
+}
+
 .app .close-board-btn {
   color: #ffffffaa;
   cursor: pointer;
@@ -233,5 +251,6 @@
 
 .app .close-board-btn:hover {
   color: white;
+  text-shadow: 0px 0px 3px white;
 }
 /*# sourceMappingURL=task-board.css.map */
