--- a/styles/bouncing-ball.scss
+++ b/styles/bouncing-ball.scss
@@ -1,5 +1,8 @@
 :root {
     --boxColor: #0ff7;
+    // --boxColor: rgba(49, 150, 54, 0.467);
+    --rotateSpeed: 30s;
+    --bounceSpeed: 1.5s;
 }
 
 body {
@@ -10,19 +13,24 @@ body {
     align-items: center;
     font-size: 75px;
     perspective: 10em;
-    perspective-origin: 50% calc(50% - 2em);
+    perspective-origin: 50% calc(50% - 3em);
 }
 
 .scene {
     position: relative;
     transform-style: preserve-3d;
+    animation: sceneRotate var(--rotateSpeed) infinite linear;
+
+    @keyframes sceneRotate {
+        to { transform: rotateY(360deg); }
+    }
 }
 
 .ball {
     width: 1em;
     height: 1em;
     border-radius: 50%;
-    background: lightblue;
+    // background: lightblue;
     position: absolute;
     left: -.5em;
     bottom: 1em;
@@ -31,23 +39,43 @@ body {
         lightblue,
         #000
     );
+    animation:
+        ballBounce var(--bounceSpeed) infinite ease-out,
+        sceneRotate var(--rotateSpeed) infinite linear reverse;
+
+    @keyframes ballBounce {
+        0%, 100% { bottom: 0.5em; }
+        50% { bottom: 3em; animation-timing-function: ease-in; }
+    }
 }
 
 .ball-shadow {
     position: absolute;
     width: 100%;
     height: 100%;
-    // background-color: #fff;
     background-image: radial-gradient(#0007, #0000 50%);
+    animation: ballShadow var(--bounceSpeed) infinite ease-in-out;
+
+    @keyframes ballShadow {
+        0%, 8%, 93.5%, 100% { transform: scale(1); opacity: 1; }
+        50% { transform: scale(2); opacity: .5; animation-timing-function: ease-in; }
+    }
 }
 
 .cube {
     width: 2em;
     height: 2em;
     position: absolute;
-    top: -1em;
+    bottom: -1em;
     left: -1em;
     transform-style: preserve-3d;
+    animation:
+        cubeHeight var(--bounceSpeed) infinite linear;
+
+        @keyframes cubeHeight {
+            0%, 100% { height: 1.5em; }
+            8%, 93.5% { height: 2em; }
+    }
 
     .left, .right, .front, .back {
         position: absolute;
@@ -78,7 +106,9 @@ body {
         background: #0007;
         bottom: 0;
         transform: translateY(50%) rotateX(90deg);
-        box-shadow: 0 0 .5em #000a;
+        box-shadow:
+            // 0 0 0.3em 0.1em rgba(0, 114, 0, 0.527),
+            0 0 .5em 0.3em #0007;
     }
 }
 
