--- a/styles/bouncing-ball.css
+++ b/styles/bouncing-ball.css
@@ -4,9 +4,9 @@
   --bounceSpeed: 1.5s;
 }
 
-body {
+.frame {
   background: #000;
-  min-height: 100vh;
+  min-height: 650px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
