--- a/styles/bouncing-ball.css
+++ b/styles/bouncing-ball.css
@@ -17,64 +17,18 @@
       -ms-flex-align: center;
           align-items: center;
   font-size: 75px;
-  -webkit-perspective: 10em;
-          perspective: 10em;
+  -webkit-perspective: 15em;
+          perspective: 15em;
   -webkit-perspective-origin: 50% calc(50% - 4em);
           perspective-origin: 50% calc(50% - 4em);
-  -webkit-animation: perspectiveOriginY var(--rotateSpeed) infinite ease-in-out;
-          animation: perspectiveOriginY var(--rotateSpeed) infinite ease-in-out;
-}
-
-@-webkit-keyframes perspectiveOriginY {
-  0% {
-    -webkit-perspective-origin: 50% calc(50% - 4em);
-            perspective-origin: 50% calc(50% - 4em);
-  }
-  50% {
-    -webkit-perspective-origin: 50% calc(50% - 0em);
-            perspective-origin: 50% calc(50% - 0em);
-  }
-  100% {
-    -webkit-perspective-origin: 50% calc(50% - 4em);
-            perspective-origin: 50% calc(50% - 4em);
-  }
-}
-
-@keyframes perspectiveOriginY {
-  0% {
-    -webkit-perspective-origin: 50% calc(50% - 4em);
-            perspective-origin: 50% calc(50% - 4em);
-  }
-  50% {
-    -webkit-perspective-origin: 50% calc(50% - 0em);
-            perspective-origin: 50% calc(50% - 0em);
-  }
-  100% {
-    -webkit-perspective-origin: 50% calc(50% - 4em);
-            perspective-origin: 50% calc(50% - 4em);
-  }
 }
 
 .scene {
   position: relative;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
-  -webkit-animation: sceneRotate var(--rotateSpeed) infinite linear;
-          animation: sceneRotate var(--rotateSpeed) infinite linear;
-}
-
-@-webkit-keyframes sceneRotate {
-  to {
-    -webkit-transform: rotateY(360deg);
-            transform: rotateY(360deg);
-  }
-}
-
-@keyframes sceneRotate {
-  to {
-    -webkit-transform: rotateY(360deg);
-            transform: rotateY(360deg);
-  }
+  -webkit-transition: .5s ease-out;
+  transition: .5s ease-out;
 }
 
 .ball {
@@ -84,6 +38,8 @@
   position: absolute;
   left: -.5em;
   bottom: 1em;
+  -webkit-transition: .5s ease-out;
+  transition: .5s ease-out;
   background-image: radial-gradient(circle at top, lightblue, #000);
   animation: ballBounce var(--bounceSpeed) infinite ease-out, sceneRotate var(--rotateSpeed) infinite linear reverse;
 }
@@ -120,7 +76,7 @@
 }
 
 @-webkit-keyframes ballShadow {
-  0%, 8%, 93.5%, 100% {
+  0%, 6.5%, 93.5%, 100% {
     -webkit-transform: scale(1);
             transform: scale(1);
     opacity: 1;
@@ -135,7 +91,7 @@
 }
 
 @keyframes ballShadow {
-  0%, 8%, 93.5%, 100% {
+  0%, 6.5%, 93.5%, 100% {
     -webkit-transform: scale(1);
             transform: scale(1);
     opacity: 1;
@@ -165,7 +121,7 @@
   0%, 100% {
     height: 1.5em;
   }
-  8%, 93.5% {
+  6.5%, 93.5% {
     height: 2em;
   }
 }
@@ -174,7 +130,7 @@
   0%, 100% {
     height: 1.5em;
   }
-  8%, 93.5% {
+  6.5%, 93.5% {
     height: 2em;
   }
 }
@@ -234,10 +190,11 @@
 .floor {
   width: 15em;
   height: 15em;
-  background-image: radial-gradient(#0000, #000 75%), repeating-conic-gradient(from 45deg, #222 0deg 90deg, #333 90deg 180deg);
+  background-image: radial-gradient(#0000, #000 75%), repeating-conic-gradient(from 45deg, #333 0deg 90deg, #444 90deg 180deg);
   background-size: 100%, 1em 1em;
   position: absolute;
   top: 1em;
+  opacity: .9;
   -webkit-transform: translate(-50%, -50%) rotateX(90deg);
           transform: translate(-50%, -50%) rotateX(90deg);
 }
