--- a/styles/bouncing-ball.scss
+++ b/styles/bouncing-ball.scss
@@ -11,25 +11,26 @@
     justify-content: center;
     align-items: center;
     font-size: 75px;
-    perspective: 10em;
+    perspective: 15em;
     perspective-origin: 50% calc(50% - 4em);
-    animation: perspectiveOriginY var(--rotateSpeed) infinite ease-in-out;
+    // animation: perspectiveOriginY var(--rotateSpeed) infinite ease-in-out;
 
-    @keyframes perspectiveOriginY {
-        0% { perspective-origin: 50% calc(50% - 4em); }
-        50% { perspective-origin: 50% calc(50% - 0em); }
-        100% { perspective-origin: 50% calc(50% - 4em); }
-    }
+    // @keyframes perspectiveOriginY {
+    //     0% { perspective-origin: 50% calc(50% - 4em); }
+    //     50% { perspective-origin: 50% calc(50% - 0em); }
+    //     100% { perspective-origin: 50% calc(50% - 4em); }
+    // }
 }
 
 .scene {
     position: relative;
     transform-style: preserve-3d;
-    animation: sceneRotate var(--rotateSpeed) infinite linear;
+    transition: .5s ease-out;
+    // animation: sceneRotate var(--rotateSpeed) infinite linear;
 
-    @keyframes sceneRotate {
-        to { transform: rotateY(360deg); }
-    }
+    // @keyframes sceneRotate {
+    //     to { transform: rotateY(360deg); }
+    // }
 }
 
 .ball {
@@ -39,6 +40,7 @@
     position: absolute;
     left: -.5em;
     bottom: 1em;
+    transition: .5s ease-out;
     background-image: radial-gradient(
         circle at top,
         lightblue,
@@ -62,7 +64,7 @@
     animation: ballShadow var(--bounceSpeed) infinite ease-in-out;
 
     @keyframes ballShadow {
-        0%, 8%, 93.5%, 100% { transform: scale(1); opacity: 1; }
+        0%, 6.5%, 93.5%, 100% { transform: scale(1); opacity: 1; }
         50% { transform: scale(2); opacity: .5; animation-timing-function: ease-in; }
     }
 }
@@ -79,7 +81,7 @@
 
         @keyframes cubeHeight {
             0%, 100% { height: 1.5em; }
-            8%, 93.5% { height: 2em; }
+            6.5%, 93.5% { height: 2em; }
     }
 
     .left, .right, .front, .back {
@@ -122,11 +124,12 @@
         radial-gradient(#0000, #000 75%),
         repeating-conic-gradient(
             from 45deg, 
-            #222 0deg 90deg, 
-            #333 90deg 180deg);
+            #333 0deg 90deg, 
+            #444 90deg 180deg);
     background-size: 100%, 1em 1em;
     position: absolute;
     top: 1em;
+    opacity: .9;
     transform: 
         translate(-50%, -50%)
         rotateX(90deg);
