--- a/styles/bouncing-ball.scss
+++ b/styles/bouncing-ball.scss
@@ -61,6 +61,7 @@
     width: 100%;
     height: 100%;
     background-image: radial-gradient(#0007, #0000 50%);
+    transition: .5s ease-out;
     animation: ballShadow var(--bounceSpeed) infinite ease-in-out;
 
     @keyframes ballShadow {
@@ -76,6 +77,7 @@
     bottom: -1em;
     left: -1em;
     transform-style: preserve-3d;
+    transition: .5s ease-out;
     animation:
         cubeHeight var(--bounceSpeed) infinite linear;
 
@@ -130,6 +132,7 @@
     position: absolute;
     top: 1em;
     opacity: .9;
+    transition: .5s ease-out;
     transform: 
         translate(-50%, -50%)
         rotateX(90deg);
